// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and redirects when loged 1`] = `
<div>
  <div
    class="css-metwsk"
  >
    <div
      class="makeStyles-title-10"
    >
      <a
        class="makeStyles-link-11"
        href="/inicio"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-9 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="HomeIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Inicio
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-11"
        href="/proyectos"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-9 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="ProjectsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Proyectos
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-11"
        href="/personas"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-9 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="PersonsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Personas
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-11"
        href="/administradores"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-9 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="AdministratorsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Administradores
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
    </div>
    <div
      style="position: relative;"
    >
      <img
        alt="logo"
        src="logoEFFE.svg"
        style="position: absolute; top: -15px; left: -74px;"
      />
      <img
        alt="logo"
        src="EFFElogoname.svg"
      />
    </div>
    <div
      class=" css-p1qw33"
      data-testid="menu-perfil"
      title="Configuración de la cuenta"
    >
      fake
    </div>
  </div>
</div>
`;

exports[`renders correctly unloged 1`] = `
<div>
  <div
    class="css-metwsk"
  >
    <div
      class="makeStyles-title-3"
    >
      <a
        class="makeStyles-link-4"
        href="/inicio"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="HomeIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Inicio
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-4"
        href="/proyectos"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="ProjectsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Proyectos
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-4"
        href="/personas"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="PersonsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Personas
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
      <a
        class="makeStyles-link-4"
        href="/administradores"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2 MuiButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <img
              alt="home"
              src="AdministratorsIcon.svg"
              style="width: 13px; margin-right: 9px;"
            />
            Administradores
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </a>
    </div>
    <div
      style="position: relative;"
    >
      <img
        alt="logo"
        src="logoEFFE.svg"
        style="position: absolute; top: -15px; left: -74px;"
      />
      <img
        alt="logo"
        src="EFFElogoname.svg"
      />
    </div>
    <div
      class=" css-p1qw33"
      data-testid="menu-perfil"
      title="Configuración de la cuenta"
    >
      Aún no inició sesión
    </div>
  </div>
</div>
`;
